--- a/arm1.html
+++ b/arm1.html
@@ -8,62 +8,56 @@
     <link type="text/css" rel="stylesheet" href="arm.css">
 </head>
 <body>
-    <div class="white" >
-        <div class="whitelogo">
-        <img src="../photos.arm/arm-logo-white-rgb.svg">
+    <div class="bl" >
+        <div class="black">
+        <img src="../new-/photos/Arm-logo-black-pms432.svg">
         </div>
         <div class="p">
-        <p>POWER THE NEW WRA OF AL</p>
+        POWER THE NEW WRA OF AL
         </div>
         <div class="i">
-        <p>INNOVATE WITH ARM AI<br>
+           INNOVATE WITH ARM AI<br>
            WHERE COMPUTE HAPPENS
-        </p>
         </div>
-        <div class="line">
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <div class="ye">
+          <img src="../new-/photos/ai-icon-yellow.svg">
         </div>
-        <div c;ass="l">
-            <p>LEVERAGE THE INDUSTRY’S LARGEST IP 
+        <div class="l">
+            LEVERAGE THE INDUSTRY’S LARGEST IP 
             FOOTPRINT FOR YOUR AI PROJECTS
-           </p>
+           
         </div>
         <div class=learn>
-            <p>Learn more</p>
+            Learn more
         </div>
         <div class="left">
         <div class="armlogo">
-            <img src="../1arm/photos/Arm-logo-black-pms432.svg">
+            <img src="../new-/photos/arm-logo-white-rgb.svg">
         </div>
         <div class="exceptarmlogo">
-        <div class="p">
-            <img src="../1arm/photos/products.png">
+        <div class="pr">
+            <img src="../new-/photos/products.png">
             <a>products</a>
         </div>
         <div class="s">
-            <img src="../1arm/photos/solutions.png">
+            <img src="../new-/photos/solutions.png">
             <a>slutionso</a>
         </div>
         <div class="w">
-            <img src="../1arm/photos/whyarm.png">
+            <img src="../new-/photos/whyarm.png">
             <a>whyarm</a>
         </div>
-        <div class="s">
-            <img src="../1arm/photos/support.png">
+        <div class="su">
+            <img src="../new-/photos/support.png">
             <a>sporrt&
             <br>training</a>
         </div>
         <div class="r">
-            <img src="../1arm/photos/resources.png">
+            <img src="../new-/photos/resources.png">
             <a>resources</a>
         </div>
-        <div src="c">
-            <img src="../1arm/photos/company.png">
+        <div class="c">
+            <img src="../new-/photos/company.png">
             <a>company</a>
         </div>
 </body>
