修改了网页的一些内容

--- a/arm1.html
+++ b/arm1.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="arm.css">
 </head>
 <body>
-    <div class="bl" >
+    <div class="right" >
         <div class="black">
         <img src="../new-/photos/Arm-logo-black-pms432.svg">
         </div>
@@ -19,14 +19,18 @@
            INNOVATE WITH ARM AI<br>
            WHERE COMPUTE HAPPENS
         </div>
-        <div class="ye">
-          <img src="../new-/photos/ai-icon-yellow.svg">
+        <div class="underline">
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         </div>
         <div class="l">
             LEVERAGE THE INDUSTRY’S LARGEST IP 
-            FOOTPRINT FOR YOUR AI PROJECTS
-           
-        </div>
+            FOOTPRINT FOR YOUR AI PROJECTS           
+</div>
         <div class=learn>
             Learn more
         </div>
