改了一些小细节

--- a/arm1.html
+++ b/arm1.html
@@ -8,10 +8,10 @@
     <link type="text/css" rel="stylesheet" href="arm.css">
 </head>
 <body>
-    <div class="right" >
-        <div class="black">
-        <img src="../new-/photos/Arm-logo-black-pms432.svg">
-        </div>
+    <div class="line" >
+      <div class="img">
+        <div class="little">
+      </div>arm</div>
         <div class="p">
         POWER THE NEW WRA OF AL
         </div>
@@ -19,6 +19,7 @@
            INNOVATE WITH ARM AI<br>
            WHERE COMPUTE HAPPENS
         </div>
+        <span>___________________</span>
         <div class="underline">
           &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
           &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
@@ -29,15 +30,12 @@
         </div>
         <div class="l">
             LEVERAGE THE INDUSTRY’S LARGEST IP 
-            FOOTPRINT FOR YOUR AI PROJECTS           
-</div>
+            FOOTPRINT FOR YOUR AI PROJECTS          
+          </div>
         <div class=learn>
             Learn more
         </div>
         <div class="left">
-        <div class="armlogo">
-            <img src="../new-/photos/arm-logo-white-rgb.svg">
-        </div>
         <div class="exceptarmlogo">
         <div class="pr">
             <img src="../new-/photos/products.png">
